# arc-house-operator

./: .gitignore  README.md  pyproject.toml
config/: official_sources.yaml
docs/: safety-boundaries.md  single-account-runbook.md  stack.md
scripts/: daily_report.py  session_check.py  supervised_opener.py
tests/: test_arc_house_operator.py
