[project]
name = "arc-house-operator"
version = "0.1.0"
description = "Safe supervised Arc House routine tooling"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.40"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
